--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="src/api/base.js"></script>
   </body>
 </html>
